--- a/Projeto de IHC/Agência de VIagens/Protótipo site final/home.html
+++ b/Projeto de IHC/Agência de VIagens/Protótipo site final/home.html
@@ -112,7 +112,7 @@
 <body>
   <nav class="navbar navbar">
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html">TALENT ROUTE</a>
+      <a class="navbar-brand" href="home.html">Viaja GO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -146,11 +146,11 @@
   <main>
   <div class="card text-center">
     <div class="card-body p-5">
-      <h5 class="card-title">SPECIAL OFFERS</h5>
+      <h5 class="card-title">OFERTAS ESPECIAIS</h5>
       <h2 class="card-title2">20%OFF</h2>
       <img src="img/capitolio.jpg" width="420px">
       <p class="card-text">MALLORCA, SPAIN</p>
-      <a href="#" class="btn">MORE INFO</a>
+      <a href="#" class="btn">MAIS INFORMAÇÕES</a>
     </div>
   </div>
 
@@ -159,7 +159,7 @@
       <h2 class="card-title2">20%OFF</h2>
       <img src="img/greece.jpg" width="420px">
       <p class="card-text">CRETE, GREECE.</p>
-      <a href="#" class="btn">MORE INFO</a>
+      <a href="#" class="btn">MAIS INFORMAÇÕES</a>
     </div>
   </div>
 
@@ -168,7 +168,7 @@
       <h2 class="card-title2">20%OFF</h2>
       <img src="img/beach.jpg" width="420px">
       <p class="card-text">MACEIÓ, BRAZIL</p>
-      <a href="#" class="btn">MORE INFO</a>
+      <a href="#" class="btn">MAIS INFORMAÇÕES</a>
     </div>
   </div>
 </main>
@@ -177,31 +177,31 @@
 
   <div class="grid-container">
     <a href="#" style="text-decoration:none">
-      <div class="grid-item1">Contact Us</div>
+      <div class="grid-item1">Contate-nos</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item2">Terms</div>
+      <div class="grid-item2">Termos</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item3">Other Services</div>
+      <div class="grid-item3">Outros serviços</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item4">Suport</div>
+      <div class="grid-item4">Suporte</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item5">Privacy</div>
+      <div class="grid-item5">Privacidade</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item6">Payment</div>
+      <div class="grid-item6">Pagamento</div>
     </a>
     <a href="#" style="text-decoration:none">
       <div class="grid-item7">Feedback</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item8">Conditions</div>
+      <div class="grid-item8">Condições</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item9">Our Group</div>
+      <div class="grid-item9">Nosso grupo</div>
     </a>
   </div>
 
