--- a/Projeto de IHC/Agência de VIagens/Protótipo site final/blog2.html
+++ b/Projeto de IHC/Agência de VIagens/Protótipo site final/blog2.html
@@ -115,7 +115,7 @@
 <body>
     <nav class="navbar navbar">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">TALENT ROUTE</a>
+            <a class="navbar-brand" href="home.html">Viaja GO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </div>
-        <h2 class="titulo-banner">TRAVEL TIPS</h2>
+        <h2 class="titulo-banner">DICAS DE VIAGEM</h2>
     </header>
 
     <!--INÍCIO MAIN - CARDS-->
@@ -154,10 +154,10 @@
                     <img src="img/map.jpg" class="card-img-top" alt="..." width="350px">
                     <div class="card-body">
                         <a href="#">
-                            <p class="card-text">6 Reasons Why You Should Go on a Multi Destination Trip</p>
+                            <p class="card-text">6 razões pelas quais você deve fazer uma viagem com vários destinos</p>
                         </a>
                         <div class="list-group">
-                            <p>There can be so many things to think about when planning a trip and every...</p>
+                            <p>Pode haver tantas coisas em que pensar ao planejar uma viagem...</p>
                         </div>
                     </div>
                 </div>
@@ -168,12 +168,8 @@
                     <img src="img/italy.jpg" class="card-img-top" alt="..." width="350px">
                     <div class="card-body">
                         <a href="#">
-                            <p class="card-text">Travel Photography and Videography: Ideas of Things to Do When Stuck at
-                                Home</p>
+                            <p class="card-text">Fotografia e videografia de viagens: ideias de coisas para fazer quando estiver em viagem.</p>
                         </a>
-                        <div class="list-group">
-                            <p>More professional programs with extensive features include Final Cut Pro...</p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -183,17 +179,16 @@
                     <img src="img/hotel.jpg" class="card-img-top" alt="..." width="350px">
                     <div class="card-body">
                         <a href="#">
-                            <p class="card-text">What are the Different Accommodation Types Available for your Travels?</p>
+                            <p class="card-text">Quais são os diferentes tipos de acomodação disponíveis para suas viagens?</p>
                         </a>
                         <div class="list-group">
-                            <p>From tips for planning, health and fitness, money and budgeting, safety, blogging,
-                                photography...</p>
+                            <p>Desde dicas de planejamento, saúde e preparo físico, dinheiro e orçamento, segurança, blogs, fotografias...</p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <h2 class="titulo-banner">HOW TO PLAN YOUR TRIP</h2>
+                <h2 class="titulo-banner">COMO PLANEJAR SUA VIAGEM</h2>
 
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
@@ -201,12 +196,11 @@
                         <img src="img/airplane.jpg" class="card-img-top" alt="..." width="350px">
                         <div class="card-body">
                             <a href="#">
-                                <p class="card-text">Best Jobs That Help You Travel And See More Of The World</p>
+                                <p class="card-text">Melhores empregos que ajudam você a viajar e ver mais do mundo.</p>
                             </a>
                             <p class="card-text"></p>
                             <div class="list-group">
-                                <p>Working as a tour guide, which may be for expeditions, multi destinations trips...
-                                </p>
+                                <p>Trabalhando como guia turístico, podendo ser para expedições, viagens multidestinos...</p>
                             </div>
                         </div>
                     </div>
@@ -217,11 +211,10 @@
                         <img src="img/europe.jpg" class="card-img-top" alt="..." width="350px">
                         <div class="card-body">
                             <a href="#">
-                                <p class="card-text">How to Visit Europe on a Low Budget - Cheap Travel Tips</p>
+                                <p class="card-text">Como visitar a Europa com baixo orçamento - dicas de viagem baratas</p>
                             </a>
                             <div class="list-group">
-                                <p>Working as a tour guide, which may be for expeditions, multi destinations trips...
-                                </p>
+                                <p>Viaje durante a baixa temporada e use sites de comparação de preços para economizar em voos e acomodações.</p>
                             </div>
                         </div>
                     </div>
@@ -232,19 +225,17 @@
                         <img src="img/trip.jpg" class="card-img-top" alt="..." width="350px">
                         <div class="card-body">
                             <a href="#">
-                                <p class="card-text">Important Things to Do Before You Travel (With a Downloadable
-                                    Checklist)</p>
+                                <p class="card-text">Coisas importantes a fazer antes de viajar. </p>
                             </a>
                             <div class="list-group">
-                                <p>Being a bit more organised and checking various things before you travel can
-                                    ensure...</p>
+                                <p>Ser um pouco mais organizado e verificar várias coisas antes de viajar pode garantir uma melhor qualidade da viagem.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <h2 class="titulo-banner">BUDGET TRAVEL</h2>
+            <h2 class="titulo-banner">ORÇAMENTO DE VIAGEM</h2>
 
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
@@ -252,11 +243,10 @@
                         <img src="img/cam.jpg" class="card-img-top" alt="..." width="350px">
                         <div class="card-body">
                             <a href="#">
-                                <p class="card-text">How to Protect Your Gear When Travelling With an Expensive Camera
-                                </p>
+                                <p class="card-text">Como proteger seu equipamento ao viajar com uma câmera cara</p>
                             </a>
                             <div class="list-group">
-                                <p>There can be so many things to think about when planning a trip and every...</p>
+                                <p>Pode haver tantas coisas em que pensar ao planejar uma viagem...</p>
                             </div>
                         </div>
                     </div>
@@ -267,11 +257,10 @@
                         <img src="img/eco.jpg" class="card-img-top" alt="..." width="350px">
                         <div class="card-body">
                             <a href="#">
-                                <p class="card-text">5 Simple Swaps to Travel More Sustainably and Be More Eco-friendly
-                                </p>
+                                <p class="card-text">5 trocas simples para viajar de forma mais sustentável e ser mais ecológico</p>
                             </a>
                             <div class="list-group">
-                                <p>You may be going on your first group trip with friends but have no idea...</p>
+                                <p>Você pode estar fazendo sua primeira viagem em grupo com amigos, mas não tem ideia de como se preparar para a viagem.</p>
                             </div>
                         </div>
                     </div>
@@ -282,12 +271,10 @@
                         <img src="img/snow.jpg" class="card-img-top" alt="..." width="350px">
                         <div class="card-body">
                             <a href="#">
-                                <p class="card-text">20 Tips for Keeping You and Your Possessions Safe Whilst Travelling
-                                </p>
+                                <p class="card-text">20 dicas para manter você e seus pertences seguros durante a viagem</p>
                             </a>
                             <div class="list-group">
-                                <p>Staying safe is important wherever you are, but when you are travelling you may be...
-                                </p>
+                                <p>Ficar seguro é importante onde quer que você esteja.</p>
                             </div>
                         </div>
                     </div>
@@ -298,31 +285,31 @@
 
     <div class="grid-container">
         <a href="#" style="text-decoration:none">
-            <div class="grid-item1">Contact Us</div>
+            <div class="grid-item1">Contate-nos</div>
         </a>
         <a href="#" style="text-decoration:none">
-            <div class="grid-item2">Terms</div>
+            <div class="grid-item2">Termos</div>
         </a>
         <a href="#" style="text-decoration:none">
-            <div class="grid-item3">Other Services</div>
+            <div class="grid-item3">Outros serviços</div>
         </a>
         <a href="#" style="text-decoration:none">
-            <div class="grid-item4">Suport</div>
+            <div class="grid-item4">Suporte</div>
         </a>
         <a href="#" style="text-decoration:none">
-            <div class="grid-item5">Privacy</div>
+            <div class="grid-item5">Privacidade</div>
         </a>
         <a href="#" style="text-decoration:none">
-            <div class="grid-item6">Payment</div>
+            <div class="grid-item6">Pagamento</div>
         </a>
         <a href="#" style="text-decoration:none">
             <div class="grid-item7">Feedback</div>
         </a>
         <a href="#" style="text-decoration:none">
-            <div class="grid-item8">Conditions</div>
+            <div class="grid-item8">Condições</div>
         </a>
         <a href="#" style="text-decoration:none">
-            <div class="grid-item9">Our Group</div>
+            <div class="grid-item9">Nosso grupo</div>
         </a>
     </div>
     <footer>
