--- a/Projeto de IHC/Agência de VIagens/Protótipo site final/contato2.html
+++ b/Projeto de IHC/Agência de VIagens/Protótipo site final/contato2.html
@@ -156,7 +156,7 @@
 <body>
     <nav class="navbar navbar">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">TALENT ROUTE</a>
+            <a class="navbar-brand" href="home.html">Viaja GO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -189,7 +189,7 @@
 
 
     <div class="contato">
-        <p class="contato1">CONTACT US</p>
+        <p class="contato1">CONTATE-NOS</p>
     </div>
 
     <!--FORMS BOOTSTRAP-->
@@ -198,17 +198,17 @@
     <div class="forms">
         <form class="row g-3 needs-validation" novalidate>
             <div class="col-md-3">
-                <label for="validationCustom01" class="form-label">Name</label>
-                <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+                <label for="validationCustom01" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="validationCustom01" placeholder="nome" required>
                 <div class="valid-feedback">
-                    Looks good!
+                    Muito bem!
                 </div>
             </div>
             <div class="col-md-3">
-                <label for="validationCustom02" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+                <label for="validationCustom02" class="form-label">Sobrenome</label>
+                <input type="text" class="form-control" id="validationCustom02" placeholder="sobrenome" required>
                 <div class="valid-feedback">
-                    Looks good!
+                    Muito bem!
                 </div>
             </div>
             <div class="col-md-3">
@@ -218,56 +218,56 @@
                     <input type="text" class="form-control" id="validationCustomUsername"
                         aria-describedby="inputGroupPrepend" required>
                     <div class="invalid-feedback">
-                        Please choose a username.
+                        Por favor escolha um nome de usuário.
                     </div>
                 </div>
             </div>
             <div class="col-md-2">
-                <label for="validationCustom03" class="form-label">State</label>
+                <label for="validationCustom03" class="form-label">Estado</label>
                 <select class="form-select" id="validationCustom04" required>
-                    <option selected disabled value="">Choose...</option>
+                    <option selected disabled value="">Selecionar</option>
                     <option>...</option>
                 </select>
                 <div class="invalid-feedback">
-                    Please select a valid state.
+                    Selecione um estado válido.
                 </div>
 
                 <div class="invalid-feedback">
-                    Please provide a valid city.
+                    Forneça uma cidade válida.
                 </div>
             </div>
             <div class="col-md-3">
-                <label for="validationCustom04" class="form-label">City</label>
+                <label for="validationCustom04" class="form-label">Cidade</label>
                 <select class="form-select" id="validationCustom04" required>
-                    <option selected disabled value="">Choose...</option>
+                    <option selected disabled value="">Selecionar</option>
                     <option>...</option>
                 </select>
                 <div class="invalid-feedback">
-                    Please select a valid state.
+                    Selecione uma cidade válida.
                 </div>
             </div>
             <div class="col-md-3">
-                <label for="validationCustom05" class="form-label">Zip</label>
+                <label for="validationCustom05" class="form-label">CEP</label>
                 <input type="text" class="form-control" id="validationCustom05" required>
                 <div class="invalid-feedback">
-                    Please provide a valid zip.
+                    Forneça um CEP válido.
                 </div>
             </div>
             <div class="col-12">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
                     <label class="form-check-label" for="invalidCheck">
-                        Agree to terms and conditions
+                        Concordo com os termos e condições.
                     </label>
                     <div class="invalid-feedback">
-                        You must agree before submitting.
+                        Você deve concordar antes de enviar.
                     </div>
                 </div>
             </div>
             <div class="col-12">
                 <button
                     style="color:rgb(255, 255, 255); background-color: rgb(11, 28, 95); border-color:rgb(11, 28, 95)"
-                    class="btn btn-primary" type="submit">SEND</button>
+                    class="btn btn-primary" type="submit">ENVIAR</button>
             </div>
         </form>
 
@@ -275,7 +275,7 @@
         <!--Redes sociais - Section-->
 
         <section>
-            <p class="social">Social Media</p>
+            <p class="social">Mídia social</p>
             <div class="container_media">
 
                 <a href="https://www.instagram.com/"><img src="img/insta.png" class="img-thumbnail" alt="..."
@@ -305,31 +305,31 @@
 
         <div class="grid-container">
             <a href="#" style="text-decoration:none">
-                <div class="grid-item1">Contact Us</div>
+                <div class="grid-item1">Contate-nos</div>
             </a>
             <a href="#" style="text-decoration:none">
-                <div class="grid-item2">Terms</div>
+                <div class="grid-item2">Termos</div>
             </a>
             <a href="#" style="text-decoration:none">
-                <div class="grid-item3">Other Services</div>
+                <div class="grid-item3">Outros serviços</div>
             </a>
             <a href="#" style="text-decoration:none">
-                <div class="grid-item4">Suport</div>
+                <div class="grid-item4">Suporte</div>
             </a>
             <a href="#" style="text-decoration:none">
-                <div class="grid-item5">Privacy</div>
+                <div class="grid-item5">Privacidade</div>
             </a>
             <a href="#" style="text-decoration:none">
-                <div class="grid-item6">Payment</div>
+                <div class="grid-item6">Pagamento</div>
             </a>
             <a href="#" style="text-decoration:none">
                 <div class="grid-item7">Feedback</div>
             </a>
             <a href="#" style="text-decoration:none">
-                <div class="grid-item8">Conditions</div>
+                <div class="grid-item8">Condições</div>
             </a>
             <a href="#" style="text-decoration:none">
-                <div class="grid-item9">Our Group</div>
+                <div class="grid-item9">Nosso grupo</div>
             </a>
         </div>
         <footer>
