--- a/Projeto de IHC/Agência de VIagens/Protótipo site final/destino.html
+++ b/Projeto de IHC/Agência de VIagens/Protótipo site final/destino.html
@@ -144,7 +144,7 @@
 <body>
   <nav class="navbar navbar">
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html">TALENT ROUTE</a>
+      <a class="navbar-brand" href="home.html">Viaja GO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -177,26 +177,26 @@
 
   <main>
   <div class="viagens">
-    <p>Explore Your Destiny</p>
+    <p>Explore seu destino</p>
 
     <!--Início Forms BOOTSTRAP-->
 
     <form class="row gy-2 gx-3">
       <div class="col-4">
-        <label class="visually-hidden" for="autoSizingInput">Name</label>
-        <input type="text" class="form-control" id="autoSizingInput" placeholder="Where? Country, city..">
+        <label class="visually-hidden" for="autoSizingInput">Nome</label>
+        <input type="text" class="form-control" id="autoSizingInput" placeholder="Onde? País, cidade..">
       </div>
       <div class="col-4">
-        <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
+        <label class="visually-hidden" for="autoSizingInputGroup">Nome de usuário</label>
         <div class="input-group">
 
           <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Check-in Check-out">
         </div>
       </div>
       <div class="col-2">
-        <label class="visually-hidden" for="autoSizingSelect">Preference</label>
+        <label class="visually-hidden" for="autoSizingSelect">Preferencias</label>
         <select class="form-select" id="autoSizingSelect">
-          <option selected>Guests</option>
+          <option selected>selecionar</option>
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -209,12 +209,12 @@
         <div class="form-check">
           <input class="form-check-input" type="checkbox" id="autoSizingCheck">
           <label class="form-check-label" for="autoSizingCheck">
-            I'm traveling for work
+            Estou viajando a trabalho
           </label>
         </div>
       </div>
       <div class="col-auto">
-        <button type="submit" class="btn">Submit</button>
+        <button type="submit" class="btn">Enviar</button>
       </div>
     </form>
   </div>
@@ -225,26 +225,25 @@
     <div class="card">
       <a href="#" style="text-decoration:none"><img src="img/montains.jpg" class="card-img-top" alt="..."></a>
       <div class="card-body">
-        <p class="card-text"> <a href="#" style="text-decoration:none">Montains</p></a>
-        <h5 class="card-title">The regions of Fjord Norway. Fjord Norway is not merely a place. It’s an experience.</h5>
+        <p class="card-text"> <a href="#" style="text-decoration:none">Montanhas</p></a>
+        <h5 class="card-title">As regiões do Fiorde Noruega. O Fiorde Noruega não é apenas um lugar. É uma experiência.</h5>
       </div>
     </div>
 
     <div class="card">
       <a href="#" style="text-decoration:none"><img src="img/beach.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text"><a href="#" style="text-decoration:none">Beach</p>
+          <p class="card-text"><a href="#" style="text-decoration:none">Praia</p>
       </a>
-      <h5 class="card-title">Spain is one of the best beach countries in Europe. Near to town, Platja de la Ribera is
-        one of the most popular beaches.</h5>
+      <h5 class="card-title">A Espanha é um dos melhores países de praia da Europa. Perto da cidade, Platja de la Ribera é uma das praias mais populares.</h5>
     </div>
   </div>
 
   <div class="card">
     <a href="#" style="text-decoration:none"><img src="img/river.jpg" class="card-img-top" alt="..."></a>
     <div class="card-body">
-      <p class="card-text"><a href="#" style="text-decoration:none">Lakes and Rivers</p></a>
-      <h5 class="card-title">Canada is known as the land of lakes. The country has more than 30,000 lakes.</h5>
+      <p class="card-text"><a href="#" style="text-decoration:none">Lagos e Rios</p></a>
+      <h5 class="card-title">O Canadá é conhecido como a terra dos lagos. O país tem mais de 30.000 lagos.</h5>
     </div>
   </div>
   </div>
@@ -254,31 +253,31 @@
 
   <div class="grid-container">
     <a href="#" style="text-decoration:none">
-      <div class="grid-item1">Contact Us</div>
+      <div class="grid-item1">Contate-nos</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item2">Terms</div>
+      <div class="grid-item2">Termos</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item3">Other Services</div>
+      <div class="grid-item3">Outros Serviços</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item4">Suport</div>
+      <div class="grid-item4">Suporte</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item5">Privacy</div>
+      <div class="grid-item5">Privacidade</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item6">Payment</div>
+      <div class="grid-item6">Pagamento</div>
     </a>
     <a href="#" style="text-decoration:none">
       <div class="grid-item7">Feedback</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item8">Conditions</div>
+      <div class="grid-item8">Condições</div>
     </a>
     <a href="#" style="text-decoration:none">
-      <div class="grid-item9">Our Group</div>
+      <div class="grid-item9">Nosso grupo</div>
     </a>
   </div>
 
