--- a/Projeto de IHC/Agência de VIagens/Protótipo site final/promocao.html
+++ b/Projeto de IHC/Agência de VIagens/Protótipo site final/promocao.html
@@ -107,7 +107,7 @@
 <body>
     <nav class="navbar navbar">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">TALENT ROUTE</a>
+            <a class="navbar-brand" href="home.html">Viaja GO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -139,7 +139,7 @@
     <!--INÍCIO MAIN - PROMOÇÕES-->
 
     <main>
-    <h1 class="promo">BEST TRAVEL PACKAGES</h1>
+    <h1 class="promo">MELHORES PACOTES DE VIAGEM</h1>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
@@ -148,7 +148,7 @@
                     <p class="card-text">Sydney, Australia</p>
                     <!--Button-->
                     <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action">Read More</a>
+                        <a href="#" class="list-group-item list-group-item-action">Ler mais</a>
                     </div>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                     <p class="card-text">Amazon Rainforest, Brazil</p>
                     <!--Button-->
                     <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action">Read More</a>
+                        <a href="#" class="list-group-item list-group-item-action">Ler mais</a>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                     <p class="card-text">Bergen, Norway</p>
                     <!--Button-->
                     <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action">Read More</a>
+                        <a href="#" class="list-group-item list-group-item-action">Ler mais</a>
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                         <p class="card-text">Bangkok, Thailand</p>
                         <!--Button-->
                         <div class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action">Read More</a>
+                            <a href="#" class="list-group-item list-group-item-action">Ler mais</a>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                         <p class="card-text">Bazaruto, Mozambique</p>
                         <!--Button-->
                         <div class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action">Read More</a>
+                            <a href="#" class="list-group-item list-group-item-action">Ler mais</a>
                         </div>
                     </div>
                 </div>
@@ -214,7 +214,7 @@
                         <p class="card-text">Jericoacoara, Brazil</p>
                         <!--Button-->
                         <div class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action">Read More</a>
+                            <a href="#" class="list-group-item list-group-item-action">Ler mais</a>
                         </div>
                     </div>
                 </div>
@@ -226,31 +226,31 @@
 
         <div class="grid-container">
             <a href="#" style="text-decoration:none">
-              <div class="grid-item1">Contact Us</div>
+              <div class="grid-item1">Contate-nos</div>
             </a>
             <a href="#" style="text-decoration:none">
-              <div class="grid-item2">Terms</div>
+              <div class="grid-item2">Termos</div>
             </a>
             <a href="#" style="text-decoration:none">
-              <div class="grid-item3">Other Services</div>
+              <div class="grid-item3">Outros serviços</div>
             </a>
             <a href="#" style="text-decoration:none">
-              <div class="grid-item4">Suport</div>
+              <div class="grid-item4">Suporte</div>
             </a>
             <a href="#" style="text-decoration:none">
-              <div class="grid-item5">Privacy</div>
+              <div class="grid-item5">Privacidade</div>
             </a>
             <a href="#" style="text-decoration:none">
-              <div class="grid-item6">Payment</div>
+              <div class="grid-item6">Pagamento</div>
             </a>
             <a href="#" style="text-decoration:none">
               <div class="grid-item7">Feedback</div>
             </a>
             <a href="#" style="text-decoration:none">
-              <div class="grid-item8">Conditions</div>
+              <div class="grid-item8">Condições</div>
             </a>
             <a href="#" style="text-decoration:none">
-              <div class="grid-item9">Our Group</div>
+              <div class="grid-item9">Nosso grupo</div>
             </a>
           </div>
         <footer>
