--- a/Projeto de IHC/Agência de VIagens/Protótipo site final/sobrenos.html
+++ b/Projeto de IHC/Agência de VIagens/Protótipo site final/sobrenos.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">TALENT ROUTE</a>
+            <a class="navbar-brand" href="home.html">Viaja GO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
 
     <main>
     <div class="quem">
-        <p>ABOUT US</p>
+        <p>SOBRE NÓS</p>
     </div>
 
     <!--INÍCIO VÍDEO YOUTUBE-->
@@ -55,29 +55,22 @@
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
 
-    <h3 class="title">TRAVEL ROUTINE</h3>
+    <h3 class="title">ROTINA DE VIAGEM</h3>
 
-    <h5 class="word">Founded in 2005 by three university friends in Düsseldorf (Germany), trivago has since become a
-        leading global
-        accommodation search website. We are focused on reshaping the way millions of travelers search for and compare
-        hotels and other accommodations. Part of Expedia Group (NASDAQ: TRVG), trivago’s mission is to become your
-        companion
-        to experience our world.Founded in 2005 by three university friends in Düsseldorf (Germany), trivago has since
-        become
-        accommodation search website. We are focused on reshaping the way millions of travelers search for and compare
-        hotels and other accommodations. Part of Expedia Group (NASDAQ: TRVG), trivago’s mission is to become your
-        companion
-        to experience our world.
-        Founded in 2005 by three university friends in Düsseldorf (Germany), trivago has since become a leading global
-        accommodation search website. We are focused on reshaping the way millions of travelers search for and compare
-        hotels and other accommodations. Part of Expedia Group (NASDAQ: TRVG), trivago’s mission is to become your
-        companion
-        to experience our world.
-        Founded in 2005 by three university friends in Düsseldorf (Germany), trivago has since become a leading global
-        accommodation search website. We are focused on reshaping the way millions of travelers search for and compare
-        hotels and other accommodations. Part of Expedia Group (NASDAQ: TRVG), trivago’s mission is to become your
-        companion
-        to experience our world.</h5>
+    <h5 class="word">Bem-vindo ao Viaja GO, a sua porta de entrada para aventuras emocionantes e experiências inesquecíveis ao redor do mundo! Somos uma equipe apaixonada de estudantes da Instituição Federal da Paraíba que acredita que viajar é uma das melhores formas de enriquecer a vida e expandir horizontes.
+Nossa Missão
+    A missão do Viaja GO é tornar o mundo acessível a todos. Queremos inspirar as pessoas a explorar novos destinos, mergulhar em culturas diferentes e criar memórias que durarão para sempre. Nosso compromisso é fornecer informações confiáveis, dicas de viagem valiosas e as melhores ofertas, tornando as viagens uma realidade para todos.
+
+Nossa Equipe
+    Nosso time é formado por apaixonados por viagens, desde viajantes experientes até amantes da tecnologia. Juntos, combinamos nosso conhecimento de destinos de tirar o fôlego, nossas habilidades técnicas e nossa dedicação para criar a melhor plataforma de viagens possível.
+
+Nossa Jornada
+    O Viaja GO começou como um sonho compartilhado por um grupo de amigos que adoravam explorar o mundo. Ao longo dos anos, transformamos esse sonho em realidade, compilando informações úteis, dicas locais e recursos de planejamento de viagem para ajudar viajantes de todas as idades e interesses.
+
+Entre em Contato
+    Estamos aqui para tornar suas viagens mais memoráveis e convenientes. Se você tem dúvidas, sugestões ou gostaria de compartilhar suas próprias experiências de viagem conosco, fique à vontade para entrar em contato. O Viaja GO é uma comunidade de viajantes, e sua voz é importante para nós.
+
+Agradecemos por escolher o Viaja GO como seu companheiro de viagem. Prepare-se para embarcar em aventuras incríveis conosco!</h5>
 
     </main>
 
@@ -85,31 +78,31 @@
 
     <div class="grid-container">
         <a href="#" style="text-decoration:none">
-          <div class="grid-item1">Contact Us</div>
+          <div class="grid-item1">Contate-nos</div>
         </a>
         <a href="#" style="text-decoration:none">
-          <div class="grid-item2">Terms</div>
+          <div class="grid-item2">Termos</div>
         </a>
         <a href="#" style="text-decoration:none">
-          <div class="grid-item3">Other Services</div>
+          <div class="grid-item3">Outros Serviços</div>
         </a>
         <a href="#" style="text-decoration:none">
-          <div class="grid-item4">Suport</div>
+          <div class="grid-item4">Suporte</div>
         </a>
         <a href="#" style="text-decoration:none">
-          <div class="grid-item5">Privacy</div>
+          <div class="grid-item5">Privacidade</div>
         </a>
         <a href="#" style="text-decoration:none">
-          <div class="grid-item6">Payment</div>
+          <div class="grid-item6">Pagamento</div>
         </a>
         <a href="#" style="text-decoration:none">
           <div class="grid-item7">Feedback</div>
         </a>
         <a href="#" style="text-decoration:none">
-          <div class="grid-item8">Conditions</div>
+          <div class="grid-item8">Condições</div>
         </a>
         <a href="#" style="text-decoration:none">
-          <div class="grid-item9">Our Group</div>
+          <div class="grid-item9">Nosso Grupo</div>
         </a>
       </div>
     <footer>
