--- a/Projeto de IHC/Agência de VIagens/Protótipo site final/blog2.html
+++ b/Projeto de IHC/Agência de VIagens/Protótipo site final/blog2.html
@@ -170,6 +170,9 @@
                         <a href="#">
                             <p class="card-text">Fotografia e videografia de viagens: ideias de coisas para fazer quando estiver em viagem.</p>
                         </a>
+                        <div class="list-group">
+                            <p>Fotosgrafias de uma viagem é a melhor forma de guardar as memórias boas de uma viagem bem feita.</p>
+                        </div>
                     </div>
                 </div>
             </div>
